feat: [story/EP-1790] new org API
