# src/spec/swagger.json
@@ -3337,6 +3337,50 @@
             "Bearer": []
           }
         ]
+      },
+      "post": {
+        "tags": ["organizations-management"],
+        "summary": "Add a new organization",
+        "description": "",
+        "operationId": "addOrganization",
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Organization"
+            }
+          },
+          {
+            "in": "query",
+            "name": "group",
+            "description": "Primary group name. Required when multiple primary groups included in the token.",
+            "required": false,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "default": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "ApiKey": [],
+            "Bearer": []
+          }
+        ]
       }
     },
     "/management/organizations/{id}": {
@@ -3732,6 +3776,12 @@
         },
         "description": {
           "type": "string"
+        },
+        "owners": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
         }
       },
       "xml": {
